--- a/blog.html
+++ b/blog.html
@@ -3,11 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Insights — Science Station</title>
+  <title>
+Science Station Blog | National Science Day 2026 Chennai – ZS Trade Show
+</title>
+
+  <meta name="description" content="Explore Science Station blog articles on science communication, VR learning, Raman Effect demonstrations, SEO as a scientific process, and National Science Day 2026 insights from ZS Trade Show Chennai." />
+
+<link rel="canonical" href="https://science-station.vercel.app/blog.html" />
+
+<meta property="og:title" content="Science Station Blog – National Science Day 2026 Chennai">
+<meta property="og:description" content="Insights on science communication, VR education, Raman Effect, and digital innovation from Science Station at ZS Trade Show 2026 Chennai.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://science-station.vercel.app/blog.html">
+<meta property="og:image" content="https://science-station.vercel.app/favicon.png">
+  
   <link rel="stylesheet" href="blog.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;1,9..40,300&display=swap" rel="stylesheet" />
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "Blog",
+ "name": "Science Station Blog",
+ "url": "https://science-station.vercel.app/blog.html",
+ "description": "Insights on science communication, VR education, Raman Effect, and National Science Day 2026 exhibition at ZS Trade Show Chennai."
+}
+</script>
+
 </head>
 <body>
 
@@ -15,11 +38,12 @@
   <nav class="nav" aria-label="Site navigation">
     <div class="nav__logo">Science Station</div>
     <ul class="nav__links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Exhibits</a></li>
-      <li><a href="#" class="active">Blog</a></li>
-      <li><a href="#">Visit</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="index.html">Home</a></li>
+<li><a href="exhibits.html">Exhibits</a></li>
+<li><a href="blog.html" class="active">Blog</a></li>
+<li><a href="quiz.html">Quiz</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
@@ -31,19 +55,31 @@
       <div class="hero__content">
         <span class="hero__eyebrow">Blog &amp; Ideas</span>
         <h1 id="blog-hero-heading" class="hero__h1">
-          Science Station<br /><em>Insights</em>
-        </h1>
+Science Station Blog<br />
+<em>National Science Day 2026 Insights</em>
+</h1>
         <p class="hero__sub">Exploring science, learning, and innovation.</p>
         <div class="hero__divider" aria-hidden="true"></div>
         <div class="hero__meta">
-          <span>2 Articles</span>
-          <span>Science Communication</span>
+          <span>Science Communication & Innovation</span>
           <span>Updated 2025</span>
         </div>
       </div>
       <div class="hero__orb hero__orb--1" aria-hidden="true"></div>
       <div class="hero__orb hero__orb--2" aria-hidden="true"></div>
     </section>
+
+    <section class="blog-intro">
+  <p>
+    The Science Station Blog explores ideas behind the National Science Day 2026 exhibition at
+    ZS Trade Show Chennai. From Raman Effect demonstrations and immersive VR science experiences
+    to digital marketing as a scientific method, we break down how science connects to modern innovation.
+  </p>
+      <p>
+    All insights are inspired by the Science Station exhibition presented at ZS Trade Show 2026 in Chennai
+        as part of National Science Day celebrations.
+  </p>
+</section>
 
     <!-- ── FILTER BAR ── -->
     <div class="filter-bar" role="navigation" aria-label="Blog categories">
@@ -85,7 +121,7 @@
               science communicators are turning viral formats into genuine learning moments.
             </p>
             <div class="card__footer">
-              <a href="#" class="card__btn" aria-label="Read more about How Science Memes Improve Learning">
+              <a href="blog/how-science-memes-improve-learning.html" class="card__btn" aria-label="Read more about How Science Memes Improve Learning">
                 Read More
                 <span class="card__btn-arrow" aria-hidden="true">→</span>
               </a>
@@ -117,7 +153,7 @@
               practitioners are, in fact, applied scientists working with data and controlled tests.
             </p>
             <div class="card__footer">
-              <a href="#" class="card__btn card__btn--blue" aria-label="Read more about Is SEO a Scientific Process?">
+              <a href="blog/is-seo-a-scientific-process.html" class="card__btn card__btn--blue" aria-label="Read more about Is SEO a Scientific Process?">
                 Read More
                 <span class="card__btn-arrow" aria-hidden="true">→</span>
               </a>
@@ -137,7 +173,7 @@
           <h2 id="newsletter-heading" class="newsletter__title">New ideas, straight to your inbox.</h2>
           <p class="newsletter__sub">No noise. Just science worth reading.</p>
         </div>
-        <form class="newsletter__form" role="form" aria-label="Newsletter signup">
+        <form  action="#" method="post" class="newsletter__form" role="form" aria-label="Newsletter signup">
           <label for="email-input" class="sr-only">Email address</label>
           <input
             id="email-input"
@@ -151,6 +187,13 @@
         </form>
       </div>
     </section>
+    <section class="blog-links">
+  <p>
+    Explore the full <a href="index.html">Science Station National Science Day 2026 Exhibition</a>, 
+    discover our <a href="exhibits.html">Interactive Science Exhibits</a>, 
+    or participate in the <a href="quiz.html">National Science Day Quiz</a>.
+  </p>
+</section>
 
   </main>
 
