--- a/exhibits.html
+++ b/exhibits.html
@@ -3,11 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exhibits — Science Station</title>
+  <title>
+Science Station Exhibits | National Science Day 2026 Chennai – ZS Trade Show
+</title>
+
+  <meta name="description" content="Explore Science Station exhibits at National Science Day 2026 in Chennai, presented at ZS Trade Show 2026.
+    Featuring Raman Effect demonstrations, immersive science video experience, Raman Effect conceptual exploration,
+    and science communication exhibits." />
+
+<link rel="canonical" href="https://science-station.vercel.app/exhibits.html" />
+
+<meta property="og:title" content="Science Station Exhibits – National Science Day 2026 Chennai">
+<meta property="og:description" content="Raman Effect, VR science, titration experiments and interactive exhibits at ZS Trade Show 2026 Chennai.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://science-station.vercel.app/exhibits.html">
+<meta property="og:image" content="https://science-station.vercel.app/favicon.png">
+  
   <link rel="stylesheet" href="exhibits.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;1,9..40,300&display=swap" rel="stylesheet" />
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "Event",
+ "name": "Science Station Exhibits",
+ "description": "Interactive exhibits including Raman Effect demonstration, VR science experiences, and live titration experiments at National Science Day 2026 in Chennai.",
+ "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+ "location": {
+   "@type": "Place",
+   "name": "ZS Trade Show 2026",
+   "address": {
+     "@type": "PostalAddress",
+     "addressLocality": "Chennai",
+     "addressCountry": "India"
+   }
+ }
+}
+</script>
 </head>
 <body>
 
@@ -15,10 +48,12 @@
   <nav class="nav" aria-label="Site navigation">
     <div class="nav__logo">Science Station</div>
     <ul class="nav__links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#" class="active">Exhibits</a></li>
-      <li><a href="#">Visit</a></li>
-      <li><a href="#">About</a></li>
+      <<li><a href="index.html">Home</a></li>
+<li><a href="exhibits.html" class="active">Exhibits</a></li>
+<li><a href="quiz.html">Quiz</a></li>
+<li><a href="blog.html">Blog</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
@@ -32,8 +67,9 @@
       <div class="hero__content">
         <span class="hero__label">Exhibits 2025</span>
         <h1 id="hero-heading" class="hero__h1">
-          The Science Station<br /><em>Experience</em>
-        </h1>
+Science Station Exhibits<br />
+<em>National Science Day 2026</em>
+</h1>
         <p class="hero__sub">Where curiosity becomes interaction.</p>
         <a href="#vr" class="btn">Explore Exhibits ↓</a>
       </div>
@@ -45,20 +81,27 @@
       </div>
     </section>
 
-    <!-- ─────────── 2. VR ─────────── -->
+    <section class="exhibits-intro">
+  <p>
+    Science Station presents a series of interactive exhibits at National Science Day 2026 in Chennai,
+    as part of ZS Trade Show 2026. From immersive Virtual Reality science simulations to live acid–base titration
+    demonstrations and conceptual Raman Effect explorations, each exhibit is designed to transform scientific theory
+    into hands-on experience.
+  </p>
+</section>
+
+    <!-- ─────────── 2.  vdo  ─────────── -->
     <section class="exhibit exhibit--vr" id="vr" aria-labelledby="vr-heading">
       <div class="exhibit__number" aria-hidden="true">01</div>
       <div class="exhibit__inner">
-        <div class="exhibit__tag">Virtual Reality</div>
-        <h2 id="vr-heading" class="exhibit__title">VR: Inside the Mind of Science</h2>
+        <div class="exhibit__tag">Immersive Science Video</div>
+              <h2>Visual Science Experience</h2>
         <p class="exhibit__desc">
-          Step beyond the boundaries of a traditional exhibit and into an immersive, 360-degree
-          scientific journey. Our VR experience places you inside cellular structures, lets you
-          witness chemical reactions at the molecular level, and propels you through the vast
-          corridors of the universe — all from a single headset. Every interaction is calibrated
-          to reveal the hidden logic of the natural world, making abstract principles tangible,
-          visceral, and unforgettable.
-        </p>
+          Experience science through curated high-impact visual storytelling. Our immersive
+          science video explores molecular interactions, optical phenomena like the Raman Effect, and real-world 
+          scientific applications through dynamic animations and guided explanations. Designed to make abstract scientific 
+          principles intuitive and memorable.
+</p>
         <div class="exhibit__meta">
           <span>Duration: ~15 min</span>
           <span>All ages welcome</span>
@@ -75,40 +118,9 @@
       </div>
     </section>
 
-    <!-- ─────────── 3. TITRATION ─────────── -->
-    <section class="exhibit exhibit--titration exhibit--alt" id="titration" aria-labelledby="titration-heading">
-      <div class="exhibit__number" aria-hidden="true">02</div>
-      <div class="exhibit__inner">
-        <div class="exhibit__tag">Live Demonstration</div>
-        <h2 id="titration-heading" class="exhibit__title">Precision in Motion:<br />Acid–Base Titration</h2>
-        <p class="exhibit__desc">
-          Witness measurement elevated to an art form. In our titration demonstration, a single
-          drop of solution transforms colour permanently — a vivid signal that chemistry has
-          reached its point of perfect balance. Visitors observe the controlled addition of a
-          titrant, tracking pH shifts in real time on live graphs, and learn how precision
-          instruments and scientific intuition combine to reveal the invisible stoichiometry
-          hiding inside everyday liquids.
-        </p>
-        <div class="exhibit__meta">
-          <span>Demonstrations every hour</span>
-          <span>Hands-on component available</span>
-          <span>Ages 10+</span>
-        </div>
-      </div>
-      <div class="exhibit__visual" aria-hidden="true">
-        <div class="viz viz--titration">
-          <div class="burette">
-            <div class="burette__liquid"></div>
-          </div>
-          <div class="beaker">
-            <div class="beaker__liquid"></div>
-            <div class="beaker__drop"></div>
-          </div>
-        </div>
-      </div>
-    </section>
+   
 
-    <!-- ─────────── 4. RAMAN ─────────── -->
+    <!-- ─────────── 3. RAMAN ─────────── -->
     <section class="exhibit exhibit--raman" id="raman" aria-labelledby="raman-heading">
       <div class="exhibit__number" aria-hidden="true">03</div>
       <div class="exhibit__inner">
@@ -196,11 +208,19 @@
           contagious curiosity, you carry something real. That is the Science Station experience.
         </p>
         <div class="closing__actions">
-          <a href="#" class="btn btn--ghost">Plan Your Visit</a>
-          <a href="#" class="btn">Book a Group Tour</a>
+          <a href="contact.html" class="btn btn--ghost">Plan Your Visit</a>
+          <a href="contact.html" class="btn">Book a Group Tour</a>
         </div>
       </div>
     </section>
+
+    <section class="exhibits-links">
+  <p>
+    Learn more about the full <a href="index.html">Science Station Exhibition</a>, 
+    read our <a href="blog.html">Science Communication Blog</a>, 
+    or participate in the <a href="quiz.html">National Science Day Quiz</a>.
+  </p>
+</section>
 
   </main>
 
