--- a/exhibits.html
+++ b/exhibits.html
@@ -41,6 +41,34 @@ Science Station Exhibits | National Science Day 2026 Chennai – ZS Trade Show
  }
 }
 </script>
+<style>
+  .explore-more {
+  padding: var(--section-pad) clamp(2rem, 6vw, 8rem);
+  background: rgba(10, 10, 20, 0.5);
+  text-align: left;
+}
+
+.explore-inner {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.explore-more h2 {
+  font-family: var(--font-display);
+  font-size: clamp(1.8rem, 3vw, 2.2rem);
+  color: #fff;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+}
+
+.explore-more p {
+  font-family: var(--font-body);
+  font-size: clamp(1rem, 1.4vw, 1.15rem);
+  color: rgba(255, 255, 255, 0.85);
+  line-height: 1.8;
+}
+</style>
+  
 </head>
 <body>
 
