--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
  <title>
 Science Station – National Science Day 2026 Chennai | ZS Trade Show 
 </title>
-  <meta name="description" content="Experience Science Station at National Science Day 2026 – an interactive science exhibition booth featuring live titration demonstrations,
-    Raman Effect concepts, immersive VR science experiences, and educational science memes." />
-  
-
+ <meta name="description" content="Experience Science Station at National Science Day 2026 Chennai – an interactive
+   science exhibition booth featuring a visual science experience, Raman Effect exploration, and educational science memes
+   at ZS Trade Show 2026." />
   <meta name="google-site-verification" content="2whmG4C4TLPjBYQ-kxrLXzUNFqwLRfiEMMRJXEBq3P8" />
   <meta name="google-site-verification" content="wxtNDGMtQQc3NZcBytH3ipyzdHbHmURha-dZsEk5GqA" />
 
@@ -21,7 +20,8 @@ Science Station – National Science Day 2026 Chennai | ZS Trade Show
   "@context": "https://schema.org",
   "@type": "Event",
   "name": "Science Station – National Science Day 2026",
-  "description": "An interactive science exhibition booth featuring VR experiences, titration demos, Raman Effect concepts and science memes.",
+  "description": ""An interactive science exhibition booth featuring a visual science experience,
+    Raman Effect exploration and science communication displays."",
   "eventStatus": "https://schema.org/EventScheduled",
   "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode"
 }
@@ -49,7 +49,8 @@ Science Station – National Science Day 2026 Chennai | ZS Trade Show
  <link rel="canonical" href="https://science-station.vercel.app/" />
   
   <meta property="og:title" content="Science Station – National Science Day 2026">
-<meta property="og:description" content="Interactive science exhibition booth with VR, Raman Effect, and live titration demonstrations.">
+<meta property="og:description" content="Interactive science exhibition booth featuring a visual science experience,
+  Raman Effect exploration, and science communication at ZS Trade Show 2026 Chennai.">
  <meta property="og:url" content="https://science-station.vercel.app/">
 <meta property="og:image" content="https://science-station.vercel.app/favicon.png">
 <meta property="og:type" content="website">
@@ -350,7 +351,9 @@ Science Station – ZS Trade Show 2026 National Science Day Exhibition
         Redefining How<br /><span class="accent-purple">Science Feels</span>
       </h2>
      <p class="about-text">
-Science Station is an interactive science exhibition presented during National Science Day 2026 in Chennai and showcased at the ZS Trade Show 2026. The experience combines live titration demonstrations, Raman Effect experiments, immersive VR simulations, and engaging scientific storytelling to make learning experiential and memorable.
+Science Station is an interactive science exhibition presented during National Science Day 2026 in Chennai 
+       and showcased at the ZS Trade Show 2026. The experience combines a curated science video presentation, Raman Effect
+       conceptual exploration, and engaging scientific storytelling to make learning experiential and memorable.
 </p>
         <p class="about-text">
  This immersive experience combines live titration demonstrations, 
@@ -373,13 +376,13 @@ Science Station is an interactive science exhibition presented during National S
       <!-- Stats row -->
       <div class="stats-row">
         <div class="stat">
-          <span class="stat-num">4</span>
+          <span class="stat-num">3</span>
           <span class="stat-label">Interactive Zones</span>
         </div>
         <div class="stat-divider" aria-hidden="true"></div>
         <div class="stat">
-          <span class="stat-num">360°</span>
-          <span class="stat-label">VR Immersion</span>
+          <span class="stat-num">1</span>
+          <span class="stat-label">Immersive Science Film</span>
         </div>
         <div class="stat-divider" aria-hidden="true"></div>
         <div class="stat">
@@ -416,15 +419,15 @@ Science Station is an interactive science exhibition presented during National S
 
       <!-- Card 3 -->
       <article class="card card--teal">
-        <div class="card-icon" aria-hidden="true">🥽</div>
-        <h3 class="card-title">VR Science Experience</h3>
-        <p class="card-desc">
-          Strap on a headset and travel inside a cell, orbit an atom, or stand
-          at the edge of a black hole. Immersive 360° science that textbooks
-          can only dream about.
-        </p>
-        <span class="card-tag">Virtual Reality</span>
-      </article>
+  <div class="card-icon" aria-hidden="true">🎬</div>
+  <h3 class="card-title">Immersive Science Video</h3>
+  <p class="card-desc">
+    A curated visual science experience presenting molecular interactions,
+    optical phenomena like the Raman Effect, and real-world scientific
+    applications through guided visual storytelling.
+  </p>
+  <span class="card-tag">Visual Experience</span>
+</article>
 
       <!-- Card 4 -->
       <article class="card card--green">
@@ -457,8 +460,8 @@ Science Station is an interactive science exhibition presented during National S
   <div class="local-seo-inner">
     <h2>Science Station at ZS Trade Show 2026 Chennai</h2>
     <p>
-      Science Station is proudly presented at the ZS Trade Show 2026 in Chennai as part of the National Science Day celebration. This interactive science exhibition features live titration demonstrations, Raman Effect experiments, immersive VR learning, and hands-on scientific exploration.
-    </p>
+  Science Station is proudly presented at the ZS Trade Show 2026 in Chennai as part of the National Science Day celebration. This interactive science exhibition features a curated science video presentation, Raman Effect exploration, and engaging science communication designed to spark curiosity and critical thinking.
+</p>
   </div>
 </section>
   <!-- =============================================
