--- a/quiz.html
+++ b/quiz.html
@@ -4,25 +4,57 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>National Science Day 2026 Quiz | Science Station ZS Trade Show Chennai</title>
+
+  <meta name="description" content="Participate in the National Science Day 2026 Live Quiz at Science Station, ZS Trade Show Chennai. Join via Mentimeter, compete live, and see your name on the leaderboard." />
+<link rel="canonical" href="https://science-station.vercel.app/quiz.html" />
+
+<meta property="og:title" content="National Science Day 2026 Live Quiz – Science Station">
+<meta property="og:description" content="Join the live interactive science quiz at Science Station, ZS Trade Show Chennai. Compete in real time and climb the leaderboard.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://science-station.vercel.app/quiz.html">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&family=Space+Mono:wght@400;700&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="quiz.css" />
+  
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "National Science Day 2026 Live Quiz – Science Station",
+  "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+  "location": {
+    "@type": "Place",
+    "name": "ZS Trade Show 2026",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Chennai",
+      "addressCountry": "India"
+    }
+  }
+}
+</script>
 </head>
 <body>
+  <nav style="position:fixed; top:0; width:100%; background:#040d1e; padding:14px 30px; z-index:1000;">
+  <a href="index.html" style="color:#00d4ff; text-decoration:none; font-family:'Rajdhani',sans-serif; font-weight:700;">
+    ← Back to Science Station
+  </a>
+</nav>
 
   <!-- HERO -->
   <section class="hero">
     <div class="hero-grid-bg"></div>
     <div class="hero-content">
       <div class="badge">🔬 National Science Day</div>
-      <h1>Science Station<br /><span class="accent">Live Challenge</span></h1>
+     <h1>National Science Day 2026<br /><span class="accent">Live Science Quiz</span></h1>
       <p class="hero-sub">Think scientifically. Compete live. See your name on the leaderboard.</p>
       <p class="hero-body">
-        This is a live interactive quiz conducted as part of National Science Day at Science Station.<br />
-        Powered by Mentimeter, you can join instantly from your phone — no downloads, no signup.<br />
-        Compete in real time and watch the leaderboard update live at our stall.
-      </p>
+This is the official National Science Day 2026 Live Quiz conducted at Science Station during the ZS
+        Trade Show in Chennai. Powered by Mentimeter, participants can join instantly from their phones and compete
+        in real time on our live leaderboard.
+</p>
     </div>
     <div class="hero-decor">
       <div class="orb orb1"></div>
@@ -101,6 +133,14 @@
       </div>
     </div>
   </section>
+
+  <section class="quiz-links">
+  <p style="text-align:center; padding:40px 20px;">
+    Explore the full <a href="index.html">Science Station Exhibition</a>,
+    discover our <a href="exhibits.html">Interactive Science Exhibits</a>,
+    or read insights on our <a href="blog.html">Science Blog</a>.
+  </p>
+</section>
 
   <!-- FOOTER -->
   <footer class="footer">
