--- a/quiz.html
+++ b/quiz.html
@@ -114,6 +114,17 @@ This is the official National Science Day 2026 Live Quiz conducted at Science St
         Test your scientific thinking, challenge your peers, and compete live.<br />
         The fastest correct answers climb highest — are you ready?
       </p>
+
+      <p class="lb-body">
+  Top scorers will appear in real time on the leaderboard displayed at our stall.<br />
+  Test your scientific thinking, challenge your peers, and compete live.<br />
+  The fastest correct answers climb highest — are you ready?
+</p>
+
+<p style="margin-top:20px; font-weight:600; color:#00d4ff;">
+  Top 3 participants will be recognized at the stall.
+</p>
+      
       <div class="lb-podium">
         <div class="lb-rank lb-rank--2">
           <div class="lb-crown">🥈</div>
