--- a/quiz.html
+++ b/quiz.html
@@ -712,59 +712,70 @@ window.onValue = onValue;
     document.getElementById('player-name').focus();
   }
 
-  function submitScore() {
-    const nameInput = document.getElementById('player-name');
-    const name = nameInput.value.trim();
-    if (!name) {
-      nameInput.style.borderColor = 'var(--wrong)';
-      nameInput.placeholder = 'Please enter your name!';
-      setTimeout(() => { nameInput.style.borderColor = ''; nameInput.placeholder = 'Your name...'; }, 1500);
+ function submitScore() {
+  const nameInput = document.getElementById('player-name');
+  const name = nameInput.value.trim();
+
+  if (!name) {
+    alert("Please enter your name");
+    return;
+  }
+
+  const scoreData = {
+    name: name,
+    score: score,
+    timestamp: Date.now()
+  };
+
+  const scoresRef = ref(db, "scores");
+  push(scoresRef, scoreData);
+
+  document.getElementById('name-section').style.display = 'none';
+  document.getElementById('lb-section').style.display = 'block';
+
+ function listenToLeaderboard() {
+  const scoresRef = ref(db, "scores");
+
+  onValue(scoresRef, (snapshot) => {
+    const data = snapshot.val();
+    const table = document.getElementById("lb-table");
+    table.innerHTML = "";
+
+    if (!data) {
+      table.innerHTML = "<div class='empty-lb'>No scores yet</div>";
       return;
     }
 
-    lastSubmittedName = name;
-    const lb = getLeaderboard();
-    lb.push({ name, score, ts: Date.now() });
-    lb.sort((a, b) => b.score - a.score || a.ts - b.ts);
-    const top5 = lb.slice(0, 5);
-    localStorage.setItem('scienceQuizLB', JSON.stringify(top5));
+    const scoresArray = Object.values(data);
 
-    document.getElementById('name-section').style.display = 'none';
-    document.getElementById('lb-section').style.display = 'block';
-    renderLeaderboard(name, score);
-  }
+    scoresArray.sort((a, b) => 
+      b.score - a.score || a.timestamp - b.timestamp
+    );
 
-  function getLeaderboard() {
-    try { return JSON.parse(localStorage.getItem('scienceQuizLB')) || []; }
-    catch { return []; }
-  }
+    const top5 = scoresArray.slice(0, 5);
 
-  function renderLeaderboard(highlightName, highlightScore) {
-    const lb = getLeaderboard();
-    const table = document.getElementById('lb-table');
-    table.innerHTML = '';
+    top5.forEach((entry, index) => {
+      const row = document.createElement("div");
+      row.className = "lb-row";
 
-    if (lb.length === 0) {
-      table.innerHTML = '<div class="empty-lb">No scores yet. Be the first!</div>';
-      return;
-    }
+      const medal =
+        index === 0 ? "🥇" :
+        index === 1 ? "🥈" :
+        index === 2 ? "🥉" :
+        `#${index + 1}`;
 
-    lb.forEach((entry, i) => {
-      const row = document.createElement('div');
-      const rankClass = i === 0 ? 'rank-1' : i === 1 ? 'rank-2' : i === 2 ? 'rank-3' : '';
-      const isHighlight = entry.name === highlightName && entry.score === highlightScore;
-      row.className = `lb-row ${rankClass} ${isHighlight ? 'highlight' : ''}`;
-      const medal = i === 0 ? '🥇' : i === 1 ? '🥈' : i === 2 ? '🥉' : `#${i + 1}`;
       row.innerHTML = `
         <span class="lb-rank">${medal}</span>
-        <span class="lb-name">${escHtml(entry.name)}</span>
-        <span class="lb-score">${entry.score}/${QUESTIONS.length}</span>
+        <span class="lb-name">${entry.name}</span>
+        <span class="lb-score">${entry.score}/4</span>
       `;
-      row.style.animationDelay = `${i * 0.06}s`;
+
       table.appendChild(row);
     });
-  }
+  });
+}
 
+  
   function escHtml(str) {
     return str.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
   }
